# audio-video-codec

./: README.md
lab0/: Histogram.cpp  main.cpp  text.txt  wavsample02.txt
lab1/: FCM  Histogram.cpp  Histogram.h  Makefile  main.cpp
lab1/books/: thecallofthewild.txt
lab2/: AudioEntropy  AudioEntropy.cpp  AudioEntropy.h  FCM.cpp  FCM.h  Makefile  main.cpp  plot.gp  thecallofthewild.txt
lab2/AudioEntropy/: AudioEntropy.cpp  Makefile
lab2/FakeAudioCodec/: AudioEntropy.cpp  AudioEntropy.h  AudioReader.cpp  AudioReader.h  AudioWriter.cpp  AudioWriter.h  FakeAudioCodec  FakeAudioCodec.cpp  FakeAudioCodec.h  Golomb.cpp  Golomb.h  Makefile  Predictor.cpp  Predictor.h  main.cpp  structures.h  test_pred.cpp
lab2/Lossy/: AudioEntropy.cpp  AudioEntropy.h  AudioReader.cpp  AudioReader.h  AudioWriter.cpp  Makefile  Predictor.cpp  main.cpp  structures.h  test_samples.sh
lab2/TheRealAudioCodec/: AudioEntropy.cpp  AudioEntropy.h  AudioReader.cpp  AudioReader.h  AudioWriter.cpp  AudioWriter.h  Bitstream.cpp  Bitstream.h  FakeAudioCodec.cpp  Golomb.cpp  Golomb.h  Makefile  Predictor.cpp  Predictor.h  main.cpp  structures.h  test_samples.sh  teste.py
lab2/cav1718/: CMakeLists.txt
lab2/cav1718/t2/: CMakeLists.txt  wavCopy.c
lab3/: Makefile  Player.cpp  Player.h  VideoFile.cpp  VideoFile.h  main.cpp
lab3/lossless_encoder/: Makefile  Structures.h  jpeg_ls.cpp  jpeg_ls.h  jpeg_ls_decoder.cpp  jpeg_ls_decoder.h  main.cpp
